small change to error handling